--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "save-dev": "^0.0.1-security",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tsup": "^8.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -37,7 +38,6 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tsup": "^8.3.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
